setup husky, lint staged and fix biome settings

--- a/talk_1/.vscode/settings.json
+++ b/talk_1/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": null,
   "editor.codeActionsOnSave": {
-    "source.action.useSortedAttributes.biome": "explicit",
-    "source.fixAll.biome": "explicit",
+    "source.fixAll.biome": "explicit"
   }
 }
