--- a/talk_1/package.json
+++ b/talk_1/package.json
@@ -8,13 +8,16 @@
     "preview": "astro preview",
     "astro": "astro",
     "format": "biome format . --write",
-    "lint": "biome lint --write .",
-    "lint:fix": "biome check --write ."
+    "lint": "biome lint",
+    "lint:fix": "biome lint . --write",
+    "prepare": "husky"
   },
   "dependencies": {
     "astro": "^6.0.0-beta.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.12"
+    "@biomejs/biome": "2.3.12",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7"
   }
 }
