--- a/talk_1/biome.json
+++ b/talk_1/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!node_modules", "!dist", "!build", "!.vscode"]
+    "includes": ["src/**", "!node_modules", "!dist", "!build", "!.vscode"]
   },
   "formatter": {
     "enabled": true,
