--- a/talk_1/package.json
+++ b/talk_1/package.json
@@ -13,10 +13,16 @@
     "prepare": "cd .. && husky ./talk_1/.husky"
   },
   "dependencies": {
-    "astro": "^6.0.0-beta.3"
+    "@astrojs/node": "9.5.2",
+    "@astrojs/react": "4.4.2",
+    "astro": "5.17.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.12",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7"
   }
