--- a/talk_1/tsconfig.json
+++ b/talk_1/tsconfig.json
@@ -1,13 +1,20 @@
 {
   "extends": "astro/tsconfigs/strictest",
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"],
+  "include": [
+    ".astro/types.d.ts",
+    "**/*"
+  ],
+  "exclude": [
+    "dist"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": "./",
-    "noUnusedLocals": false, // Disable this since it is also disabled in Biome config for now, since it's not supported well enough yet in Astro
+    "noUnusedLocals": false,
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
     "plugins": [
       {
