--- a/talk_1/package.json
+++ b/talk_1/package.json
@@ -15,15 +15,22 @@
   "dependencies": {
     "@astrojs/node": "9.5.2",
     "@astrojs/react": "4.4.2",
+    "@astrojs/solid-js": "5.1.3",
+    "@astrojs/svelte": "7.2.5",
+    "@astrojs/vue": "5.1.4",
     "astro": "5.17.1",
     "react": "19.2.4",
-    "react-dom": "19.2.4"
+    "react-dom": "19.2.4",
+    "solid-js": "1.9.11",
+    "svelte": "5.49.1",
+    "typescript": "5.9.3",
+    "vue": "3.5.27"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.12",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7"
+    "husky": "9.1.7",
+    "lint-staged": "16.2.7"
   }
 }
