--- a/talk_1/tsconfig.json
+++ b/talk_1/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "astro/tsconfigs/strictest",
   "include": [
     ".astro/types.d.ts",
-    "**/*"
+    "src/**/*"
   ],
   "exclude": [
     "dist"
