wip carousel pt2

--- a/talk_1/biome.json
+++ b/talk_1/biome.json
@@ -271,6 +271,9 @@
       "linter": {
         "rules": {
           "correctness": {
+            "noUnknownPseudoElement": "off",
+            "noUnknownPseudoClass": "off",
+            "noUnknownProperty": "off",
             "noUnusedVariables": "off",
             "noUnusedImports": "off"
           },
